# BigInt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _clang-format
.cache/clangd/index/: BigInt.hpp.D3B1CFA92A6780C5.idx  add_n.cpp.A1D8ED1099197874.idx  core_utils.hpp.674BD8A62C1C076C.idx  from_int64.cpp.9F5F0D65F197C3A1.idx  from_string.cpp.A867B0F9500CE28A.idx  int64_input.cpp.549E884C6A6D680E.idx  main.cpp.FCB795E720F8B31A.idx  mul_n.cpp.EA4D1B6CA14C25C0.idx  string_input.cpp.68473BA8DDCAAB10.idx  sub_n.cpp.E8D7DBFF14C428B9.idx  to_str.cpp.BC745DA7321BBC79.idx
header_only/: BigInt.hpp
include/: Arena.hpp  BigInt.hpp  core_utils.hpp  math_functions.hpp
include/core_utils/: core_utils.hpp
include/internal/: config.hpp
src/BigInt/input-output/: from_int.cpp  from_int64.cpp  from_string.cpp  to_str.cpp  to_vec.cpp
src/BigInt/operators/: operator_add.cpp  operator_add_=.cpp  operator_add_eq.cpp  operator_mul.cpp  operator_mul_eq.cpp  operator_shl.cpp  operator_sub.cpp  operator_sub_=.cpp  operator_sub_eq.cpp
src/BigInt/operators/BigInt-BigInt/: operator_add.cpp  operator_mul.cpp  operator_output_stream.cpp  operator_sub.cpp
src/BigInt/operators/BigInt-Scalars/: operator_mul.cpp  operator_sub.cpp
src/BigInt/operators/BigInt-with-Scalars/: operator_div.cpp  operator_mul.cpp  operator_shl.cpp
src/core_utils/: add_n.cpp  cmp_abs_n.cpp  div_scalar_n.cpp  mul_n.cpp  mul_scalar_n.cpp  shl_n.cpp  sub_n.cpp
src/math_functions/: bitcount.cpp  karatsuba_n.cpp
